routes.tf
## PUBLIC ROUTE ##
resource "aws_route_table" "public_internet_access" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = format("rtb-%s-public-access", var.project_name)
  }
}

resource "aws_route" "public" {
  route_table_id = aws_route_table.public_internet_access.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "public" {
  count = length(var.public_subnets)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public_internet_access.id
}

## PRIVATE ROUTE ##
resource "aws_route_table" "private" {
  count = length(var.private_subnets)

  vpc_id = aws_vpc.main.id

  tags = {
    Name = format("rtb-%s-%s", var.project_name, var.private_subnets[count.index].name)
  }
}

resource "aws_route" "private" {
  depends_on = [
    aws_nat_gateway.main
  ]

  count = length(var.private_subnets)

  route_table_id = aws_route_table.private[count.index].id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_nat_gateway.main[
    index(
      var.public_subnets[*].availability_zone,
      var.private_subnets[count.index].availability_zone
    )
  ].id
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnets)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route.private[count.index].id
}
